apply plugin: 'com.android.application'

android {
    compileSdkVersion androidVersions.compileSdkVersion

    defaultConfig {
        applicationId "com.mapbox.mapboxsdk.testapp"
        minSdkVersion androidVersions.minSdkVersion
        targetSdkVersion androidVersions.targetSdkVersion
        versionCode 13
        versionName "6.0.0"
        testInstrumentationRunner "com.mapbox.mapboxsdk.InstrumentationRunner"
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }

    packagingOptions {
        exclude 'META-INF/LICENSE.txt'
        exclude 'META-INF/NOTICE.txt'
        exclude 'LICENSE.txt'
    }

    lintOptions {
        baseline file("lint-baseline-local.xml")
        checkAllWarnings true
        warningsAsErrors true
        disable 'MissingTranslation', 'GoogleAppIndexingWarning', 'UnpackedNativeCode', 'IconDipSize', 'TypographyQuotes'
        abortOnError false
    }

    buildTypes {
        debug {
            testCoverageEnabled true
            minifyEnabled false
            shrinkResources false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
        release {
            minifyEnabled true
            shrinkResources true
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
            signingConfig signingConfigs.debug
        }
    }

    dexOptions {
        maxProcessCount 8
        javaMaxHeapSize "2g"
        preDexLibraries true
    }
}

dependencies {
    implementation dependenciesList.kotlinLib

    implementation project(':MapboxGLAndroidSDK')
    implementation dependenciesList.mapboxJavaTurf

    implementation dependenciesList.supportAppcompatV7
    implementation dependenciesList.supportRecyclerView
    implementation dependenciesList.supportDesign
    implementation dependenciesList.supportConstraintLayout

    implementation dependenciesList.gmsLocation
    implementation dependenciesList.timber
    debugImplementation dependenciesList.leakCanaryDebug
    releaseImplementation dependenciesList.leakCanaryRelease

    androidTestImplementation dependenciesList.supportAnnotations
    androidTestImplementation dependenciesList.testRunner
    androidTestImplementation dependenciesList.testRules
    androidTestImplementation dependenciesList.testEspressoCore
    androidTestImplementation dependenciesList.testEspressoIntents
    androidTestImplementation dependenciesList.testEspressoContrib
    androidTestImplementation dependenciesList.testUiAutomator
}

apply from: "${rootDir}/gradle/gradle-make.gradle"
apply from: "${rootDir}/gradle/gradle-config.gradle"
apply from: "${rootDir}/gradle/gradle-checkstyle.gradle"
apply from: "${rootDir}/gradle/gradle-lint.gradle"



apply plugin: 'kotlin-android'
apply plugin: 'kotlin-android-extensions'
